# hwpxviewer

./: .env.example  .gitignore  .graphifyignore  CLAUDE.md  Makefile  RUN.md  SESSION_STATE.md  hwpx-viewer-v8.jsx  package.json  pnpm-lock.yaml
apps/backend/: README.md  pyproject.toml
apps/backend/src/hwpx_viewer_api/: __init__.py  config.py  errors.py  main.py  prompts.py  schemas.py
apps/backend/src/hwpx_viewer_api/routes/: claude.py  download.py  edit.py  export.py  generate.py  health.py  hit_test.py  import_.py  pages.py  render.py  save.py  upload.py
apps/backend/src/hwpx_viewer_api/security/: cors.py  upload_validate.py
apps/backend/src/hwpx_viewer_api/services/: claude_cli.py  generate_jobs.py  generate_worker.py  hwpx_patcher.py  hwpx_service.py  lineseg_postprocess.py  page_boundaries.py  plan_dispatcher.py  rhwp_wasm.py  upload_store.py
apps/backend/src/hwpx_viewer_api/skills/: __init__.py  hwpx_guide.py
apps/backend/tests/: conftest.py  test_claude_routes.py  test_health.py  test_import_export.py  test_prompts.py  test_upload_store.py  test_upload_validate.py
apps/web/: .eslintrc.cjs  .gitignore  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css
apps/web/tests/: setup.ts
docs/: ARCHITECTURE.md  COMPONENT_INVENTORY.md  DESIGN_SPEC.md  INTERACTION_SPEC.md  PRD.md  TEST_SPEC.md
docs/03-analysis/: hwpx-viewer-mvp.analysis.md
docs/04-report/: changelog.md
graphify-out/: GRAPH_REPORT.md  disambiguate.py  graph.html  graph.json  manifest.json
(+40 files in other folders)
