[project]
name = "hwpx-viewer-api"
version = "0.8.0"
description = "HWPX Viewer backend — FastAPI + pyhwpxlib + Claude proxy"
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "MindBuild", email = "ratiertm@gmail.com" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    # [preview] extras pulls in wasmtime + bundles the rhwp WebAssembly binary
    # at pyhwpxlib/vendor/rhwp_bg.wasm — see Design v0.3 §5.
    "pyhwpxlib[preview]>=0.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.32.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hwpx_viewer_api"]

# -------- Tool configs --------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["hwpx_viewer_api"]
mypy_path = "src"
